@@ -9,3 +9,4 @@ p.searchtip {
 
 .compound-middle, .compound-last { margin-top: 0; }
 
+img.screenshot { padding-left: 16px; }
